--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "author": {
     "name": "Murugan Ayyappan",
-    "url": "https://github.com/gitbrent/"
+    "url": "https://github.com/murugan-ayyappan/"
   },
   "description": "Create JavaScript PowerPoint Presentations",
   "homepage": "https://gitbrent.github.io/PptxGenJS/",
@@ -56,7 +56,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gitbrent/PptxGenJS.git"
+    "url": "git+https://github.com/murugan-ayyappan/PptxGenJS-new.git"
   },
   "keywords": [
     "html-to-powerpoint",
